# re-mock

./: CMakeLists.txt  LICENSE.txt  README.md  fetch-GoogleTest.cmake  libsndfile.cmake  re-mock.cmake  re_mock_build.h.in
.github/workflows/: compute-checksum.yml  run-tests-macos-action.yml  run-tests-windows-action.yml
docs/: Advanced_Topics.md  Documentation.md  Install.md  Quick_Start.md
src/cpp/: fmt.h
src/cpp/re/mock/: Config.cpp  Config.h  Constants.h  DeviceTesters.cpp  DeviceTesters.h  Errors.h  Extension.cpp  Extension.h  FileManager.cpp  FileManager.h  Jukebox.cpp  LuaJBox.cpp  LuaJBox.h  MockDevices.cpp  MockDevices.h  MockDst.cpp  MockDst.h  MockJukebox.h  MockSrc.cpp  MockSrc.h  Motherboard.cpp  Motherboard.h  MotherboardImpl.h  ObjectManager.hpp  Patch.cpp  Patch.h  PatchParser.cpp  PatchParser.h  Rack.cpp  Rack.h  Resources.h  Sequencer.cpp  Sequencer.h  Transport.cpp  Transport.h  fft.cpp  fft.h  fmt.cpp  fmt.h  re-mock.h  (+1 more)
src/cpp/re/mock/lua/: InfoLua.cpp  InfoLua.h  LuaState.cpp  LuaState.h  MockJBox.cpp  MockJBox.h  MotherboardDef.cpp  MotherboardDef.h  RealtimeController.cpp  RealtimeController.h
test/cpp/re/mock/: TestDeviceTesters.cpp  TestFft.cpp  TestFmt.cpp  TestJukebox.cpp  TestMidi.cpp  TestMisc.cpp  TestMockDevices.cpp  TestPatch.cpp  TestRack.cpp  TestRackExtension.cpp  TestSequencer.cpp  TestStl.cpp  TestTransport.cpp
test/cpp/re/mock/lua/: TestInfoLua.cpp  TestLuaState.cpp  TestMotherboardDef.cpp  TestRealtimeController.cpp  TestSanityCheckSDK.cpp
test/resources/re/mock/lua/: RackExtension_RealtimeController_Blob.lua  RackExtension_RealtimeController_MultiBindings.lua  RackExtension_RealtimeController_NativeObject.lua  RackExtension_RealtimeController_Sample.lua  RackExtension_RealtimeController_UserSample.lua  all-motherboard_def.lua  blank_effect-motherboard_def.lua  blank_effect-realtime_controller.lua  function-test-realtime_controller.lua  invalid-motherboard_def.lua  invalid1.lua  invalid2.lua  simple_instrument-info.lua
test/resources/re/mock/midi/: Logic_1track_99tempo.mid  Logic_2track_99tempo.mid  Reason_1track_99tempo.mid  Reason_2track_99tempo.mid
test/resources/re/mock/patches/: Kooza_test0.repatch  Kooza_test1.repatch
